risk-engine/tests/snapshots/golden__g_privileged_on_fresh_credential.snap
---
source: tests/golden.rs
expression: "run(\"privileged_on_fresh_credential\", ctx).await"
---
scenario: privileged_on_fresh_credential
decision: Hold
score: 75
base_score: 75
adjusted_score: 75
required_action: AdminApproval
hold_reason: Some("Privileged action attempted on extremely fresh credential (trust spike protection)")
triggered_gates: [PrivilegedActionOnFreshCredential]
escalated: false
signals_degraded: false
lock_account: false
notify_user: true
notify_admin: true
breakdown: D=50 S=50 N=50 B=50 C=100 base=255 m_action=3.00 m_org=2.00 a=50 final=100
top_factors:
triggered_rules: ["PrivilegedActionOnFreshCredential"]
